argocd/k3s/apps/application/dawarich/dawarich-app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: dawarich-app
  name: dawarich-app
spec:
  containers:
    - args:
        - bin/rails
        - server
        - -p
        - "3000"
        - -b
        - '::'
      command:
        - web-entrypoint.sh
      image: freikin/dawarich:latest
      livenessProbe:
        exec:
          command:
            - wget -qO - http://127.0.0.1:3000/api/v1/health | grep -q '"status"\s*:\s*"ok"'
        failureThreshold: 30
        initialDelaySeconds: 30
        periodSeconds: 10
        timeoutSeconds: 10
      name: dawarich-app
      ports:
        - containerPort: 3000
          protocol: TCP
      resources:
        limits:
          cpu: 500m
          memory: "4294967296"
      stdin: true
      tty: true
      volumeMounts:
        - mountPath: /var/app/public
          name: dawarich-public
        - mountPath: /var/app/tmp/imports/watched
          name: dawarich-watched
        - mountPath: /var/app/storage
          name: dawarich-storage
        - mountPath: /dawarich_db_data
          name: dawarich-db-data
  restartPolicy: OnFailure
  volumes:
    - name: dawarich-public
      persistentVolumeClaim:
        claimName: dawarich-public
    - name: dawarich-watched
      persistentVolumeClaim:
        claimName: dawarich-watched
    - name: dawarich-storage
      persistentVolumeClaim:
        claimName: dawarich-storage
    - name: dawarich-db-data
      persistentVolumeClaim:
        claimName: dawarich-db-data
