argocd/k3s/apps/application/dawarich/dawarich-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: dawarich-redis
  name: dawarich-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: dawarich-redis
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.38.0 (a8f5d1cbd)
      labels:
        io.kompose.service: dawarich-redis
    spec:
      containers:
        - args:
            - redis-server
            - --save
            - "900"
            - "1"
            - --save
            - "300"
            - "10"
            - --appendonly
            - "no"
          image: redis:7.4-alpine
          livenessProbe:
            exec:
              command:
                - redis-cli
                - --raw
                - incr
                - ping
            failureThreshold: 5
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 10
          name: dawarich-redis
          volumeMounts:
            - mountPath: /data
              name: dawarich-shared
      restartPolicy: Always
      volumes:
        - name: dawarich-shared
          persistentVolumeClaim:
            claimName: dawarich-shared
