argocd/k3s/apps/application/dawarich/dawarich-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dawarich-ingress
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: timeline.lapis-dev.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dawarich-app
                port:
                  number: 3000
